tests/snapshots/dev_preview__watch_wide_normal_frame.snap
---
source: tests/dev_preview.rs
assertion_line: 454
expression: frame
---
     ╭ glorp · Mochi · fuzz · 18d · content ──────────────────────────────────────────────────────────────────────╮     
     │                                                                                                            │     
     │                                             today ─────────────────────────────────────────────────────────│     
     │                                              tokens            16,700                                      │     
     │                                              claude            12,500    75%                               │     
     │                                              codex              4,200    25%                               │     
     │                                              last 10m          +16.7k    this 10m                          │     
     │                                              ·  ·  ·  ·  ·  ▅  █         ← 7-day                           │     
     │                                                                                                            │     
     │                 /\_/\                       progress ──────────────────────────────────────────────────────│     
     │                (░* *░)                       xp         ███████░░░░░  61   ↑ 16.7k/hr                      │     
     │                 ='3'=                                                                                      │     
     │               /░▒ ✦ ▒░\                                                                                    │     
     │               (░▒░✦░▒░)                                                                                    │     
     │                \░░░░░/                                                                                     │     
     │                 d   b                                                                                      │     
     │                                                                                                            │     
     │                                                                                                            │     
     │                                                                                                            │     
     │                                                                                                            │     
     │                                                                                                            │     
     │                                                                                                            │     
     │ vitals ────────────────────────────────     feed ──────────────────────────────────────────────────────────│     
     │  fed        ████████░░░░  70                 08:53  claude-code added 8.8k effective tokens                │     
     │  happy      █████████░░░  72                 08:45  codex added 4.2k effective tokens                      │     
     │  energy     ████████░░░░  68                 08:48  claude-code added 12.5k effective tokens               │     
     │                                                                                                            │     
     │ bio ───────────────────────────────────                                                                    │     
     │  hatched   sep 21 08:53                                                                                    │     
     │  age       18d                                                                                             │     
     │                                                                                                            │     
     ╰ q quit · r refresh · m mouse · ? help ─────────────────────────────────────────────────────────────────────╯
